--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+    <script src="js/vendors/vuex.js"></script>
     <script src="js/vendors/vue-router.js"></script>
     <script src="js/editable-span.js"></script>
-    <script src="js/resume.js"></script>
+    <script src="js/app-resume.js"></script>
     <script src="js/login.js"></script>
     <script src="js/share.js"></script>
     <script src="js/register.js"></script>
