--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Resume</title>
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/default.css">
-    <link rel="stylesheet" href="css/dark.css">
+    <!-- <link rel="stylesheet" href="css/default.css"> -->
+    <!-- <link rel="stylesheet" href="css/dark.css"> -->
     <link rel="stylesheet" href="css/editable-span.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/register.css">
